--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src='/socket.io/socket.io.js'></script>
    
     <style type="text/css">
@@ -34,7 +34,7 @@
 </body>
  <script type="text/javascript">
 $(window).load(function(){
-        drawWorld();
+        
         var socket = io.connect();
         var my_id= '';
         var p_my_id= '';
