--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,16 @@
         <button id='sendMessage' class="btn-start">Send</button>
     </div>
 </div>
+<div id="instructions">
+    <h2>Instructions</h2><br>
+    <h3>Use left right down and up arrows to move.</h3><br>
+    <h4>Open application in two or more browser windows to see the Mulitplayer functionality. </h4>
+    <h4>This also enables you to chat with another user </h4><br>
+    <h4> Current goal is to eat more coins and get more points </h4><br>
+    <h4>More levels and functionality coming soon</h4>
+
+</div>
+
 </body>
  <script type="text/javascript">
 $(window).load(function(){
